syntax = "proto3";

option go_package = "channel/service";


package service;

// The greeting service definition.
service ChannelConf {
  // Sends a greeting
  rpc GetConf (GetConfRequest) returns (GetConfReply) {}
  rpc GetConfCacheKey(GetConfRequest) returns (GetConfCacheKeyReply) {}
  rpc IsExist (IsExistRequest) returns (IsExistReply) {}
}

message GetConfCacheKeyReply {
  string key = 1;
}

message GetConfRequest {
  string host = 1;
  string env = 2;
}

message GetConfReply {
  bytes config = 1;
}

message IsExistRequest {
  string host = 1;
}

message IsExistReply {
  bool isExist = 1;
}